# agent-loop

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: pr_review.py
src/agentloop/: __init__.py  agent.py  cli.py  domain.py  git.py  orchestrator.py  pipeline.py  policy.py  report.py  stop.py  store.py
src/agentloop/adapters/: __init__.py  claude.py  codex.py
tests/: test_adapters.py  test_cli.py  test_orchestrator.py  test_pipeline.py  test_report.py
