[project]
name = "agentloop"
version = "0.1.0"
description = "A generic multi-agent loop that orchestrates CLI coding agents (Claude, Codex)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.9",
    "typer>=0.15",
]

[project.scripts]
agentloop = "agentloop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentloop"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty",
    "pytest>=8.3",
]

[tool.ruff]
src = ["src", "tests", "examples"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.13"
root = ["src"]
